# CppND-System-Monitor

./: CMakeLists.txt  Makefile
include/: linux_parser.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
